--- a/ReadingList/UI/ArticleList/Component/ArticleItemCollectionViewCell.xib
+++ b/ReadingList/UI/ArticleList/Component/ArticleItemCollectionViewCell.xib
@@ -42,9 +42,18 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="テスト" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YLY-1c-pZ1">
-                        <rect key="frame" x="8" y="175" width="223" height="105"/>
-                        <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="17"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jI9-xA-BwI">
+                        <rect key="frame" x="201" y="270" width="30" height="30"/>
+                        <state key="normal" title="Add">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <connections>
+                            <action selector="tapAddButon:" destination="gTV-IL-0wX" eventType="touchUpInside" id="lZ2-O5-x5W"/>
+                        </connections>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YLY-1c-pZ1">
+                        <rect key="frame" x="8" y="189" width="223" height="81"/>
+                        <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="15"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -52,10 +61,13 @@
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="YLY-1c-pZ1" secondAttribute="bottom" constant="20" id="5Jz-ko-I6Q"/>
+                <constraint firstAttribute="bottom" secondItem="jI9-xA-BwI" secondAttribute="bottom" id="0RQ-q6-M8K"/>
+                <constraint firstItem="jI9-xA-BwI" firstAttribute="top" secondItem="YLY-1c-pZ1" secondAttribute="bottom" id="5Jz-ko-I6Q"/>
                 <constraint firstItem="fw2-A3-fpd" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.4" id="7Kg-H5-7Fs"/>
                 <constraint firstAttribute="bottom" secondItem="fw2-A3-fpd" secondAttribute="bottom" id="K6Z-44-f6e"/>
-                <constraint firstItem="YLY-1c-pZ1" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.35" id="NjZ-RN-qTG"/>
+                <constraint firstItem="jI9-xA-BwI" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.1" id="KQi-77-4wq"/>
+                <constraint firstAttribute="trailing" secondItem="jI9-xA-BwI" secondAttribute="trailing" constant="8" id="LUy-ng-yAi"/>
+                <constraint firstItem="YLY-1c-pZ1" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.27" id="NjZ-RN-qTG"/>
                 <constraint firstItem="YLY-1c-pZ1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="Nyi-gX-Y5X"/>
                 <constraint firstItem="FpT-QS-rxC" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="OWm-lX-roh"/>
                 <constraint firstAttribute="trailing" secondItem="FpT-QS-rxC" secondAttribute="trailing" id="Xan-ch-ntq"/>
