--- a/ReadingList/UI/ArticleList/Component/ArticleItemCollectionViewCell.xib
+++ b/ReadingList/UI/ArticleList/Component/ArticleItemCollectionViewCell.xib
@@ -43,7 +43,7 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jI9-xA-BwI">
-                        <rect key="frame" x="201" y="270" width="30" height="30"/>
+                        <rect key="frame" x="201" y="262" width="30" height="30"/>
                         <state key="normal" image="footer_plus">
                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
@@ -52,7 +52,7 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YLY-1c-pZ1">
-                        <rect key="frame" x="8" y="189" width="223" height="81"/>
+                        <rect key="frame" x="8" y="181" width="223" height="81"/>
                         <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="15"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -61,7 +61,7 @@
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="jI9-xA-BwI" secondAttribute="bottom" id="0RQ-q6-M8K"/>
+                <constraint firstAttribute="bottom" secondItem="jI9-xA-BwI" secondAttribute="bottom" constant="8" id="0RQ-q6-M8K"/>
                 <constraint firstItem="jI9-xA-BwI" firstAttribute="top" secondItem="YLY-1c-pZ1" secondAttribute="bottom" id="5Jz-ko-I6Q"/>
                 <constraint firstItem="fw2-A3-fpd" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.4" id="7Kg-H5-7Fs"/>
                 <constraint firstAttribute="bottom" secondItem="fw2-A3-fpd" secondAttribute="bottom" id="K6Z-44-f6e"/>
@@ -86,6 +86,7 @@
             </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="imageView" destination="FpT-QS-rxC" id="avU-dg-jdQ"/>
+                <outlet property="plusBtn" destination="jI9-xA-BwI" id="wMx-Qq-jtF"/>
                 <outlet property="titleLbl" destination="YLY-1c-pZ1" id="tKf-3p-fmB"/>
             </connections>
             <point key="canvasLocation" x="288.80000000000001" y="194.30284857571215"/>
