--- a/ReadingList/UI/AboutApp/AboutApp.storyboard
+++ b/ReadingList/UI/AboutApp/AboutApp.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--About AppVC-->
         <scene sceneID="YkV-bw-gbY">
             <objects>
                 <tableViewController id="WAa-Vu-t9X" customClass="AboutAppVC" customModule="ReadingList" customModuleProvider="target" sceneMemberID="viewController">
@@ -76,7 +76,7 @@
                             <outlet property="delegate" destination="WAa-Vu-t9X" id="m27-OG-pMT"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Item" image="footer_setting" id="4Y2-bY-qtJ"/>
+                    <tabBarItem key="tabBarItem" title="" image="footer_setting" id="4Y2-bY-qtJ"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U0L-Px-Yaw" userLabel="First Responder" sceneMemberID="firstResponder"/>
