--- a/ReadingList/UI/AboutApp/Component/SwitchTableViewCell.xib
+++ b/ReadingList/UI/AboutApp/Component/SwitchTableViewCell.xib
@@ -21,18 +21,26 @@
                 <subviews>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PhD-Uk-1LZ">
                         <rect key="frame" x="284" y="28.5" width="51" height="31"/>
+                        <connections>
+                            <action selector="tapSwitch:" destination="KGk-i7-Jjw" eventType="valueChanged" id="rTV-wg-IEr"/>
+                        </connections>
                     </switch>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="通知を受け取る" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d4G-Kz-i26">
+                        <rect key="frame" x="16" y="33.5" width="121.5" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="d4G-Kz-i26" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="32T-nB-jeY"/>
                     <constraint firstAttribute="trailing" secondItem="PhD-Uk-1LZ" secondAttribute="trailing" constant="20" id="Dpd-IJ-PnE"/>
+                    <constraint firstItem="d4G-Kz-i26" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="fWq-yg-ZHX"/>
                     <constraint firstItem="PhD-Uk-1LZ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="wlg-MW-xa4"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <connections>
-                <outlet property="switchView" destination="PhD-Uk-1LZ" id="MLY-Zy-WwX"/>
-            </connections>
-            <point key="canvasLocation" x="113.768115942029" y="104.46428571428571"/>
+            <point key="canvasLocation" x="2" y="104"/>
         </tableViewCell>
     </objects>
 </document>
